plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.darkmatterservers'
version = '0.1.3'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// ✅ Spring Boot Web
	implementation 'org.springframework.boot:spring-boot-starter-web'

    //Discord
    implementation 'net.dv8tion:JDA:5.6.1'

	// 🧰 Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// 🧪 Testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// ✅ Use JUnit Platform
tasks.named('test') {
	useJUnitPlatform()
}

// ✅ Package as fat JAR (Spring Boot handles classpath)
springBoot {
	mainClass = 'com.darkmatterservers.eclipsebot.EclipseBotApplication'
}

// ✅ Create only the fat jar with the right name
tasks.named('bootJar') {
	archiveFileName.set("EclipseBot-${version}.jar")
}

// ❌ Disable unused plain jar
tasks.named('jar') {
	enabled = false
}
